--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -9,6 +9,9 @@
     <string name="txt_term_hint">Term</string>
     <string name="txt_location_hint">Location</string>
     <string name="btn_search">Search</string>    
+    <string name="indeed_searching_title">Search on Indeed</string>
+    <string name="indeed_searching_msg">Obtaining data from Indeed...</string>
+    <string name="indeed_search_blank">No results found</string>
     	<!-- Indeed List Item -->
     	<string name="lbl_indeed_search_jobtitle">Title</string>
     	<string name="lbl_indeed_search_company">Company</string>
